public/css/style.css
.media {
	background-color: #efefef;
}

img.media-object {
	width: 128px;
	height: 128px;
	object-fit: cover;
}

.input-group {
	margin: 20px 0;
}

.navbar {
	margin-bottom: 0;
	border-radius: 0;    
}

@media (min-width: 768px) {
	.navbar {
		position: fixed;
	    width: 100%;
	    z-index: 200;	
	}

	.page-header {
		padding: 160px 0 10px;
	}
}

@media (max-width: 768px) {
	.page-header {
		padding: 40px 0 10px;
	}

  .panel-footer .pull-right {
    display: none;
  }
}

.page-header {
  background: url("/img/red-bg.jpg") no-repeat top left fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: #fff;
  margin: 0;
}

.page-header h1 {
	font-size: 56px;
}

.page-header p {
	font-size: 20px;
}

.info-relative {
  background: url("/img/red-bg.jpg") no-repeat 0 0 fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: #fff;
  text-align: center;
}

.info-relative a {
	color: white;
}

.info-relative li {
	list-style: none;
}

.box {
    padding: 20px 0;
}

hr.accent {
    border: 0;
    margin: 30px 0;
    height: 1px;
    border-top: 1px solid #eee;
/*    background-image: linear-gradient(to right, rgba(250, 93, 86, 0), rgba(250, 93, 86, 0.75), rgba(250, 93, 86, 0));	*/
}

span.label.label-language {
	background-color: #fa5d56;
}

a {
  color: #fa5d56;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition:.5s;	
}

a:hover {
  color: black;
  text-decoration: none;
}

h3.panel-title {
  font-size: 20px;
}

h2.panel-title a:hover {
	color: #fa5d56;
	text-decoration: none;
}

.panel {
  margin-bottom: 40px;
}    

.btn-action {
    color: #fff;
    background-color: #fa5d56;
    border-color: #e9564f;
}

.btn-transparent {
  background-color: rgba(255, 255, 255, 0.1);
  border-color: rgba(255, 255, 255, 0.2);
}

div.page-header p a {
  color: white;
}

h3.line {
  font-size: 30px;
  margin-top: 30px;
}

h3.line:after {
  content:' ';
  display:block;
  width: 60px;
  margin: 20px 0 30px;
  border:1px solid #fa5d56;  
}

div.box.action {
  background-color: #f5f5f5;
}

.alert {
  margin-top: 20px;
}

